# extracosmic-commons

./: .gitignore  PLAN_critical_edition_ingester.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: batch_ingest.py  cloud_ingest.py  dedup_scan.py  extract_citations.py  ingest_wu_batch_optimized.py  ingest_wu_batch_v2.py  ingest_wu_conversations.py  ingest_wu_direct.py  package_for_runpod.py  rebuild_faiss_index.py  runpod_setup.sh
src/extracosmic_commons/: __init__.py  alignment.py  bm25.py  citations.py  cli.py  database.py  drafts.py  edition_profiles.py  embed_subprocess.py  embeddings.py  index.py  metadata.py  models.py  search.py  structural.py
src/extracosmic_commons/ingest/: __init__.py  bilingual.py  citation_extractor.py  conversation.py  critical_edition.py  pdf.py  transcript.py  workbench.py  zotero.py
src/extracosmic_commons/web/: __init__.py  app.py
src/extracosmic_commons/web/templates/: citations.html  search.html
tests/: conftest.py  test_alignment.py  test_batch_ingest.py  test_bm25.py  test_citation_extractor.py  test_citation_web.py  test_citations.py  test_cli.py  test_critical_edition.py  test_database.py  test_dedup_scan.py  test_drafts.py  test_edition_profiles.py  test_embeddings.py  test_index.py  test_ingest_bilingual.py  test_ingest_pdf.py  test_ingest_transcript.py  test_ingest_workbench.py  test_ingest_zotero.py  test_metadata.py  test_models.py  test_package_for_runpod.py  test_search.py  test_structural.py  test_web.py
